RESOLVED FIXED174877
ResourceLoadStatistics API tests fail on El Capitan
https://bugs.webkit.org/show_bug.cgi?id=174877
Summary ResourceLoadStatistics API tests fail on El Capitan
Brady Eidson
Reported 2017-07-26 15:17:07 PDT
ResourceLoadStatistics API tests fail on El Capitan The reason is El Cap doesn't have cookie storage partitioning, and in that case we neglected to send the testing callback in. Doh!
Attachments
Patch (1.49 KB, patch)
2017-07-26 16:26 PDT, Brady Eidson
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (964.63 KB, application/zip)
2017-07-26 17:51 PDT, Build Bot
no flags
Brady Eidson
Comment 1 2017-07-26 16:26:19 PDT
Build Bot
Comment 2 2017-07-26 17:51:31 PDT
Comment on attachment 316496 [details] Patch Attachment 316496 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/4193207 New failing tests: imported/w3c/IndexedDB-private-browsing/idbfactory_open12.html
Build Bot
Comment 3 2017-07-26 17:51:32 PDT
Created attachment 316499 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Brady Eidson
Comment 4 2017-07-26 19:18:18 PDT
(In reply to Build Bot from comment #2) > Comment on attachment 316496 [details] > Patch > > Attachment 316496 [details] did not pass ios-sim-ews (ios-simulator-wk2): > Output: http://webkit-queues.webkit.org/results/4193207 > > New failing tests: > imported/w3c/IndexedDB-private-browsing/idbfactory_open12.html Absolutely, positively not from this patch.
WebKit Commit Bot
Comment 5 2017-07-26 19:47:23 PDT
Comment on attachment 316496 [details] Patch Clearing flags on attachment: 316496 Committed r219974: <http://trac.webkit.org/changeset/219974>
WebKit Commit Bot
Comment 6 2017-07-26 19:47:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.