ResourceLoadStatistics API tests fail on El Capitan. https://bugs.webkit.org/show_bug.cgi?id=174877

Reviewed by Chris Dumez.

Always install the testing callback.

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::enableResourceLoadStatisticsAndSetTestingCallback):


Canonical link: https://commits.webkit.org/191704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219974 268f45cc-cd09-0410-ab3c-d52691b4dbfc